# wo_joycaption_comfyui

./: .gitignore  README.md  __init__.py  joycaption_config.json  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
